# user_space_zephyr_template

./: .gitignore  CMakeLists.txt  LICENSE  README.md  prj.conf
manifest/: west.yml
src/: main.cpp
src/processes/: CMakeLists.txt  normal_thread.cpp  normal_thread.h  supervisor_thread.h  userspace_thread.h
src/processes/base_classes/: process_base.h  process_base_userspace.h
